# ViconDataStreamNative

./: .gitignore  LICENCE.Vicon.md  README.md  ViconStringTest.cpp  ViconStringTest.h  __hard_clear.sh  _bash_config.sh  _clear_local_all.sh  _ensure_dependency-recursive_Multiarch.sh  _platform_config.sh  _project_config.sh  _regenerate_dependency-recursive_Multiarch.sh  _regenerate_local_Multiarch.sh  copy-mingW-deps_Windows64.sh  ensure_dependency-recursive_Linux64.sh  ensure_dependency-recursive_Multiarch.sh  regenerate_dependency-recursive_Linux64.sh  regenerate_dependency-recursive_Multiarch.sh  regenerate_local_Linux64.sh  regenerate_local_Multiarch.sh
Boost/: __hard_clear.sh  _bash_config.sh  _ensure_dependency-recursive_Multiarch.sh  _platform_config.sh  _project_config.sh  _regenerate-soft_local_Multiarch.sh  _regenerate_dependency-recursive_Multiarch.sh  _regenerate_local_Multiarch.sh  boost-generate-full-include-dir_local_Multiarch.sh  boost-generate-usable-dir_local_Linux64.sh  boost-generate-usable-dir_local_Multiarch.sh  boost-generate-usable-dir_local_Windows64.sh  boost-setup_local_Linux64.sh  boost-setup_local_Windows64.sh  clear_local_all.sh  copy-mingW-deps_Windows64.sh  download-boost_local_Linux64.sh  download_Noarch.sh  ensure_dependency-recursive_Linux64.sh  ensure_dependency-recursive_Multiarch.sh  generate-full-include-dir_Multiarch.sh  generate-usable-boost-dir_local_Linux64.sh  hard_clear.sh  regenerate-soft_local_Linux64.sh  regenerate-soft_local_Multiarch.sh  regenerate_dependency-recursive_Linux64.sh  regenerate_dependency-recursive_Multiarch.sh  regenerate_local_Linux64.sh  regenerate_local_Multiarch.sh  setup-boost_local_Linux64.sh  setup_Linux64.sh  setup_Windows64.sh
CmakeBuild/: CMakeLists.txt  copy_Multiarch.sh  mingw.cmake
ViconDataStreamSDK/: ViconStringTest.cpp  __hard_clear.sh  _bash_config.sh  _ensure_dependency-recursive_Multiarch.sh  _project_config.sh  _regenerate_dependency-recursive_Multiarch.sh  _regenerate_local_Multiarch.sh  copy-mingW-deps_Windows64.sh  current_Linux64_source  current_build  ensure_dependency-recursive_Linux64.sh  ensure_dependency-recursive_Multiarch.sh  regenerate_dependency-recursive_Linux64.sh  regenerate_dependency-recursive_Multiarch.sh  regenerate_local_Linux64.sh  regenerate_local_Multiarch.sh
ViconDataStreamSDK/CmakeBuild/: CMakeLists.txt  _regenerate_local_Multiarch.sh  build_Linux64.sh  build_Windows64.sh  copy_Multiarch.sh  mingw.cmake  regenerate_local_Linux64.sh  regenerate_local_Windows64.sh
ViconSDK_MakeBuild/: regenerate_local_Linux64.sh
_dependencies/: CustomBoostBuild
